# launcher-meta

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  renovate.json  update_versions.py
.github/workflows/: deploy.yml  tests.yml  update-mc-versions.yml
scripts/: update_versions.py
version/: update_versions.py
version/1.10/: 1.10.json
version/1.10.1/: 1.10.1.json
version/1.10.2/: 1.10.2.json
version/1.11/: 1.11.json
version/1.11.1/: 1.11.1.json
version/1.11.2/: 1.11.2.json
version/1.12/: 1.12.json
version/1.12.1/: 1.12.1.json
version/1.13/: 1.13.json
version/1.13.1/: 1.13.1.json
version/1.13.2/: 1.13.2.json
version/1.14/: 1.14.json
version/1.14.1/: 1.14.1.json
version/1.14.2/: 1.14.2.json
version/1.14.3/: 1.14.3.json
version/1.14.4/: 1.14.4.json
version/1.15/: 1.15.json
version/1.15.1/: 1.15.1.json
version/1.15.2/: 1.15.2.json
version/1.16/: 1.16.json
version/1.16.1/: 1.16.1.json
version/1.16.2/: 1.16.2.json
version/1.16.3/: 1.16.3.json
version/1.16.4/: 1.16.4.json
version/1.16.5/: 1.16.5.json
version/1.17/: 1.17.json
version/1.17.1/: 1.17.1.json
version/1.18/: 1.18.json
version/1.18.1/: 1.18.1.json
version/1.19/: 1.19.json
version/1.19.1/: 1.19.1.json
version/1.19.2/: 1.19.2.json
version/1.19.3/: 1.19.3.json
version/1.19.4/: 1.19.4.json
version/1.20/: 1.20.json
version/1.20.1/: 1.20.1.json
version/1.20.2/: 1.20.2.json
version/1.20.3/: 1.20.3.json
version/1.20.4/: 1.20.4.json
version/1.20.5/: 1.20.5.json
version/1.20.6/: 1.20.6.json
version/1.21/: 1.21.json
version/1.21.1/: 1.21.1.json
version/1.21.10/: 1.21.10.json
version/1.21.11/: 1.21.11.json
version/1.21.2/: 1.21.2.json
version/1.21.3/: 1.21.3.json
version/1.21.4/: 1.21.4.json
version/1.21.5/: 1.21.5.json
version/1.21.6/: 1.21.6.json
version/1.21.7/: 1.21.7.json
version/1.21.8/: 1.21.8.json
version/1.21.9/: 1.21.9.json
version/1.5/: 1.5.json
version/1.9/: 1.9.json
version/1.9.1/: 1.9.1.json
version/1.9.2/: 1.9.2.json
version/1.9.3/: 1.9.3.json
version/1.9.4/: 1.9.4.json
