[tool.poetry]
name = "launcher-meta"
version = "0.1.0"
description = ""
authors = ["Pyker <pyker@technicpack.net>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = {extras = ["speedups"], version = "^3.10.1"}
packaging = "^24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
